--- a/src/app/theme/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/theme/layouts/admin-layout/admin-layout.component.html
@@ -27,7 +27,7 @@
     <div class="row">
       <div class="col my-1">
         <p class="m-0">
-          Copyright Hmid dreamflow
+          Copyright  dreamflow
 
         </p>
       </div>
