--- a/src/app/theme/layouts/admin-layout/nav-bar/nav-right/nav-right.component.html
+++ b/src/app/theme/layouts/admin-layout/nav-bar/nav-right/nav-right.component.html
@@ -5,7 +5,7 @@
   <li class="dropdown pc-h-item header-user-profile" ngbDropdown>
     <a class="pc-head-link dropdown-toggle arrow-none me-0" ngbDropdownToggle>
       <img src="assets/images/team.jpg" alt="user-image" class="user-avatar me-2" />
-      <span class="f-w-600">Hmid dreamflow</span>
+      <span class="f-w-600"> dreamflow</span>
     </a>
     <div class="dropdown-menu dropdown-user-profile dropdown-menu-end pc-h-dropdown" ngbDropdownMenu>
       <div class="dropdown-header">
